minor testing change on the index file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h4><strong>ENTER THE ADVENTURE<br><a href="./contents.html">Jump In</a></strong></h4>
             <br>
             <br>
-            <a href="./about_pg/about.html">About Fullstack_Elementary</a>
+            <a href="./about_pg/about.html">About Fullstack Elementary</a>
             <br>
             <a href="./references.html">External Resources</a>
     </body>
